dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-playground
spec:
  selector:
    matchLabels:
      app: argocd-playground
  template:
    metadata:
      labels:
        app: argocd-playground
    spec:
      containers:
        - name: playground
          image: wil42/playground:v1
          ports:
            - containerPort: 8888
