dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-playground-service
spec:
  selector:
    app: argocd-playground
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
